--- a/Tecnocuisine/Web.config
+++ b/Tecnocuisine/Web.config
@@ -13,6 +13,7 @@
     <add name="TS_TecnocuisineEntities" connectionString="metadata=res://*/Entitys.Modelo_Tecnocuisine.csdl|res://*/Entitys.Modelo_Tecnocuisine.ssdl|res://*/Entitys.Modelo_Tecnocuisine.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=51.222.29.204;initial catalog=TS_Tecnocuisine;persist security info=True;user id=sa;password=P6@9vaRQjp@$nLw;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
     <pages>
