--- a/Tecnocuisine/Tecnocuisine.csproj
+++ b/Tecnocuisine/Tecnocuisine.csproj
@@ -245,6 +245,8 @@
     <Content Include="Formularios\Maestros\Atributos.aspx" />
     <Content Include="Formularios\Maestros\Categorias.aspx" />
     <Content Include="Formularios\Maestros\Presentaciones.aspx" />
+    <Content Include="Formularios\Maestros\Alicuotas.aspx" />
+    <Content Include="Formularios\Maestros\Productos.aspx" />
     <Content Include="Formularios\Maestros\Unidades.aspx" />
     <Content Include="Formularios\Maestros\InsumosF.aspx" />
     <Content Include="Formularios\Usuario\login.aspx" />
@@ -789,6 +791,20 @@
     </Compile>
     <Compile Include="Formularios\Maestros\Presentaciones.aspx.designer.cs">
       <DependentUpon>Presentaciones.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Maestros\Alicuotas.aspx.cs">
+      <DependentUpon>Alicuotas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\Maestros\Alicuotas.aspx.designer.cs">
+      <DependentUpon>Alicuotas.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Formularios\Maestros\Productos.aspx.cs">
+      <DependentUpon>Productos.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Formularios\Maestros\Productos.aspx.designer.cs">
+      <DependentUpon>Productos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Formularios\Maestros\Unidades.aspx.cs">
       <DependentUpon>Unidades.aspx</DependentUpon>
